# game-of-life

./: Cargo.toml  Makefile  README.md  index.html  main.js  run.sh
src/: lib.rs  tests.rs
