[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Dmitrii Korchemkin <mail@kda.name>"]
repository = "https://github.com/krchmkn/game-of-life.git"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.43"

[profile.release]
lto = true
opt-level = 's'
